<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F44336"
    tools:context=".Activity.ForgetActivity">

    <ImageView
        android:id="@+id/imgRestaurantForget"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:src="@drawable/login_img"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/txtForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"

        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email_address"
        android:textSize="19sp"
        android:textColor="@color/black"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="20dp"
        android:inputType="text"
        android:background="@drawable/et_style"
        android:backgroundTint="@color/white"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_enter_name"
        android:drawablePadding="10dp"
        android:maxLines="1"
        android:autofillHints="emailAddress" />


    <EditText
        android:id="@+id/edtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_phone_no"
        android:textSize="19sp"
        android:textColor="@color/black"
        android:layout_margin="20dp"
        android:inputType="phone"
        android:background="@drawable/et_style"
        android:backgroundTint="@color/white"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_enter_phone"
        android:drawablePadding="10dp"
        android:maxLines="1"
        android:autofillHints="Phone"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textStyle="bold"
        android:textSize="19sp"
        android:textColor="@color/white"
        android:background="@color/black"
        android:layout_margin="30dp"
        android:textAllCaps="false"/>

</LinearLayout>