<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F44336"
    android:orientation="vertical"
    tools:context=".Activity.ResetPasswordActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/edtOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/otp_4_characters"
        android:textSize="19sp"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="20dp"
        android:inputType="number"
        android:background="@drawable/et_style"
        android:backgroundTint="@color/white"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_forget_otp"
        android:drawablePadding="10dp"
        android:maxLines="1"/>
    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_password"
        android:textSize="19sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:inputType="numberPassword"
        android:background="@drawable/et_style"
        android:backgroundTint="@color/white"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_enter_password"
        android:drawablePadding="10dp"
        android:maxLines="1" />

    <EditText
        android:id="@+id/edtConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:textSize="19sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:inputType="numberPassword"
        android:background="@drawable/et_style"
        android:backgroundTint="@color/white"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_enter_password"
        android:drawablePadding="10dp"
        android:maxLines="1" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Reset"
        android:textStyle="bold"
        android:textSize="19sp"
        android:textColor="@color/white"
        android:background="@color/black"
        android:layout_margin="30dp"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Response Message"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

</LinearLayout>