<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F1E3E3"
    android:layout_margin="6dp"
    app:cardCornerRadius="5.2dp">

    <LinearLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_90sdp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:padding="@dimen/_10sdp"
        android:weightSum="6">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

        <TextView
            android:id="@+id/txtItemNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:layout_centerInParent="true"
            android:textSize="@dimen/_16ssp"
            android:textColor="#615656"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.5">

            <TextView
                android:id="@+id/txtItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_manu_list"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                android:layout_margin="@dimen/_5sdp"/>

            <TextView
                android:id="@+id/txtRs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rs"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:layout_below="@+id/txtItem"
                android:padding="@dimen/_2sdp"
                android:fontFamily="@font/poppins"
                android:layout_marginStart="@dimen/_5sdp"/>

            <TextView
                android:id="@+id/txtItemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_100"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:layout_below="@+id/txtItem"
                android:layout_alignStart="@+id/txtRs"
               android:padding="@dimen/_2sdp"
                android:fontFamily="@font/poppins"
                android:layout_marginStart="@dimen/_20sdp"/>

        </RelativeLayout>


            <Button
                android:id="@+id/btnAddToCart"
                android:layout_width="0dp"
                android:layout_height="@dimen/_28sdp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:layout_weight="2.2"
                android:background="@color/colorPrimary"
                android:text="Add"
                android:visibility="visible"
                android:textAllCaps="false"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/btnRemoveFromCart"
                android:layout_width="0dp"
                android:layout_height="@dimen/_28sdp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_6sdp"
                android:layout_marginRight="@dimen/_6sdp"
                android:layout_weight="2.2"
                android:background="#FFC400"
                android:text="Remove"
                android:visibility="gone"
                android:textAllCaps="false"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"/>



    </LinearLayout>

</androidx.cardview.widget.CardView>